external-crates/move/crates/move-package-alt/tests/data/missing_required_package_segment/Move@parsed.snap
---
source: crates/move-package-alt/tests/test_runner.rs
---
error: Error while loading `"tests/data/missing_required_package_segment/Move.toml"`
  ┌─ "tests/data/missing_required_package_segment/Move.toml":1:1
  │
1 │ [dependencies]
  │ ^
  │
  = missing field `package`
